# tmux-codex-status

./: .gitignore  README.md  pyproject.toml
docs/: spec.md
pytests/: test_commands.py  test_session_scan.py  test_state.py
scripts/: codex-notify.sh  codex-pane-menu.sh  codex-refresh-pane-badges.sh  codex-select-pane.sh  codex-state-gc.sh  codex-window-badge.sh  setup.sh
scripts/lib/: codex-python.sh  codex-state.sh
src/tmux_codex_status/: __init__.py  cli.py  commands.py  process.py  session_scan.py  state.py  tmux_api.py
tests/: run-all.sh  test-gc.sh  test-pane-badge.sh  test-pane-menu.sh  test-state-map.sh  test-state-rank.sh  test-window-badge.sh
tmux/: codex-status.tmux
