[project]
name = "tmux-codex-status"
version = "0.1.0"
description = "tmux status integration for Codex CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tmux-codex-status = "tmux_codex_status.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["pytests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "pytests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.mypy]
python_version = "3.14"
files = ["src"]
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
